syntax = "proto3";

package chat.v1;

import "rbt/v1alpha1/options.proto";

////////////////////////////////////////////////////////////////////////

service UsersMethods {
  rpc Add(AddRequest) returns (AddResponse) {
    option (rbt.v1alpha1.method) = {
      writer: {},
    };
  }

  rpc List(ListRequest) returns (ListResponse) {
    option (rbt.v1alpha1.method) = {
      reader: {},
    };
  }
}

////////////////////////////////////////////////////////////////////////

message Users {
  option (rbt.v1alpha1.state) = {
  };
  repeated string users = 1;
}

message AddRequest {
  string user = 1;
}

message AddResponse {
}
message ListRequest {}

message ListResponse {
  repeated string users = 1;
}
////////////////////////////////////////////////////////////////////////

service UserMethods {
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (rbt.v1alpha1.method) = {
      transaction: {},
    };
  }
}

////////////////////////////////////////////////////////////////////////

message User {
  option (rbt.v1alpha1.state) = {
  };
}

////////////////////////////////////////////////////////////////////////

message CreateRequest {}
message CreateResponse {}

////////////////////////////////////////////////////////////////////////
